deployment_files/application_install_files/linkwarden/linkwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linkwarden
  name: linkwarden
  namespace: linkwarden
spec:
  ports:
    - name: linkwarden
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: linkwarden
  type:
    ClusterIP
